--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Aubrey:wght@400&display=swap" />
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Afacad:wght@400&display=swap" />
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" />
+  	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jaro:wght@400&display=swap" />
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" />
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amaranth:wght@400&display=swap" />
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amethysta:wght@400&display=swap" />
@@ -111,7 +112,7 @@
                   									</span>
                 								</div>
               							</div>
-              							<div class="interactive-e-book-library-parent">
+              							<div class="video-integration-embedded-an-parent">
                 								<div class="video-integration-embedded-container">
                   									<span class="video-window-real-time-container1">
                     										<p class="video-window-real-time">Video Integration: Embedded animated lessons with clear, concise controls.</p>
