--- a/home.html
+++ b/home.html
@@ -36,11 +36,11 @@
 				</div>
 				<div class="sign-up1">Sign Up</div>
 			</div>
-			<img class="user-profile-icon" alt="" src="User_Profile.svg">
+			<img class="user-profile-icon" alt="" src="./home-image/User_Profile.svg">
 
 			<div class="courses">
 				<div class="resousces">courses</div>
-				<img class="expand-right-icon" alt="" src="Expand_right.png">
+				<img class="expand-right-icon" alt="" src="./home-image/Expand_right.svg">
 
 			</div>
 			<div class="home">
@@ -51,26 +51,26 @@
 			</div>
 			<div class="resources">
 				<div class="resousces">resousces</div>
-				<img class="expand-right-icon1" alt="" src="Expand_right.png">
+				<img class="expand-right-icon1" alt="" src="./home-image/Expand_right.svg">
 
 			</div>
-			<img class="logo-icon" alt="" src="Logo.png">
+			<img class="logo-icon" alt="" src="./home-image/Logo.png">
 
 		</div>
-		<img class="background-image-1-icon" alt="" src="background-image 1.png">
+		<img class="background-image-1-icon" alt="" src="./home-image/background-image 1.png">
 
 		<div class="heading">All Kids Are Best </div>
 		<div class="heading1">Explorer In The World</div>
 		<div class="chatbot-parent">
 			<div class="chatbot">
 				<div class="heading2">How May I Help You?</div>
-				<img class="first-background-image-icon" alt="" src="First_background-image.png">
+				<img class="first-background-image-icon" alt="" src="./home-image/First_background-image.png">
 
 			</div>
-			<img class="group-child" alt="" src="Line 1.svg">
+			<img class="group-child" alt="" src="./home-image/Line 1.svg">
 
 		</div>
-		<img class="libray-1-icon" alt="" src="libray 1.png">
+		<img class="libray-1-icon" alt="" src="./home-image/libray 1.png">
 
 		<div class="heading3">Quick Access</div>
 		<div class="heading3">Quick Access</div>
@@ -99,7 +99,7 @@
 							</div>
 							<div class="interactive-e-book-library-parent">
 								<div class="interactive-e-book-library"> Interactive E-Book Library</div>
-								<img class="icon" alt="" src="2606553_5888 2.svg">
+								<img class="icon" alt="" src="./home-image/2606553_5888 2.svg">
 
 								<div class="a-collection-of">A collection of animated and audio-supported e-books with a
 									read-along feature and multilingual support. Students can download books for offline
@@ -141,75 +141,75 @@
 							</div>
 						</div>
 					</div>
-					<img class="icon1" alt="" src="6543906 1.png">
+					<img class="icon1" alt="" src="./home-image/6543906 1.png">
 
-					<img class="ani-cartoon-38-1-icon" alt="" src="26538972_2022_ani_cartoon_38 1.png">
+					<img class="ani-cartoon-38-1-icon" alt="" src="./home-image/26538972_2022_ani_cartoon_38 1.png">
 
-					<img class="p3mtr0-971-1-icon" alt="" src="1713080_244242-P3MTR0-971 1.png">
+					<img class="p3mtr0-971-1-icon" alt="" src="./home-image/1713080_244242-P3MTR0-971 1.png">
 
 				</div>
 			</div>
 			<div class="objects">
-				<img class="xmlid-55-icon" alt="" src="XMLID_55_.svg">
+				<img class="xmlid-55-icon" alt="" src="./home-image/XMLID_55_.svg">
 
-				<img class="xmlid-19-icon" alt="" src="XMLID_19_.svg">
+				<img class="xmlid-19-icon" alt="" src="./home-image/XMLID_19_.svg">
 
-				<img class="xmlid-327-icon" alt="" src="XMLID_327_.svg">
+				<img class="xmlid-327-icon" alt="" src="./home-image/XMLID_327_.svg">
 
-				<img class="xmlid-163-icon" alt="" src="XMLID_163_.svg">
+				<img class="xmlid-163-icon" alt="" src="./home-image/XMLID_163_.svg">
 
-				<img class="xmlid-312-icon" alt="" src="XMLID_312_.svg">
+				<img class="xmlid-312-icon" alt="" src="./home-image/XMLID_312_.svg">
 
-				<img class="xmlid-164-icon" alt="" src="XMLID_164_.svg">
+				<img class="xmlid-164-icon" alt="" src="./XMLID_164_.svgXMLID_164_.svg">
 
-				<img class="xmlid-161-icon" alt="" src="XMLID_161_.svg">
+				<img class="xmlid-161-icon" alt="" src="./home-image/XMLID_161_.svg">
 
-				<img class="xmlid-159-icon" alt="" src="XMLID_159_.svg">
+				<img class="xmlid-159-icon" alt="" src="./home-image/XMLID_159_.svg">
 
-				<img class="xmlid-89-icon" alt="" src="XMLID_89_.svg">
+				<img class="xmlid-89-icon" alt="" src="./home-image/XMLID_89_.svg">
 
-				<img class="xmlid-108-icon" alt="" src="XMLID_108_.svg">
+				<img class="xmlid-108-icon" alt="" src="./home-image/XMLID_108_.svg">
 
 				<div class="xmlid-28-">
-					<img class="xmlid-353-icon" alt="" src="XMLID_353_.svg">
+					<img class="xmlid-353-icon" alt="" src="./home-image/XMLID_353_.svg">
 
-					<img class="xmlid-51-icon" alt="" src="XMLID_51_.svg">
+					<img class="xmlid-51-icon" alt="" src="./home-image/XMLID_51_.svg">
 
-					<img class="xmlid-50-icon" alt="" src="XMLID_50_.svg">
+					<img class="xmlid-50-icon" alt="" src="./home-image/XMLID_50_.svg">
 
-					<img class="xmlid-403-icon" alt="" src="XMLID_403_.svg">
+					<img class="xmlid-403-icon" alt="" src="./home-image/XMLID_403_.svg">
 
 					<div class="xmlid-374-">
 						<div class="xmlid-398-">
-							<img class="xmlid-401-icon" alt="" src="XMLID_401_.svg">
+							<img class="xmlid-401-icon" alt="" src="./home-image/XMLID_401_.svg">
 
-							<img class="xmlid-399-icon" alt="" src="XMLID_399_.svg">
+							<img class="xmlid-399-icon" alt="" src="./home-image/XMLID_399_.svg">
 
 						</div>
 					</div>
-					<img class="xmlid-373-icon" alt="" src="XMLID_373_.svg">
+					<img class="xmlid-373-icon" alt="" src="./home-image/XMLID_373_.svg">
 
-					<img class="xmlid-372-icon" alt="" src="XMLID_372_.svg">
+					<img class="xmlid-372-icon" alt="" src="./home-image/XMLID_372_.svg">
 
-					<img class="xmlid-29-icon" alt="" src="XMLID_29_.svg">
+					<img class="xmlid-29-icon" alt="" src="./home-image/XMLID_372_.svg">
 
 				</div>
 			</div>
-			<img class="vector-icon" alt="" src="Vector.svg">
+			<img class="vector-icon" alt="" src="./home-image/Vector.svg">
 
 			<div class="group">
-				<img class="group-icon" alt="" src="Group.svg">
+				<img class="group-icon" alt="" src="./home-image/Group.svg">
 
-				<img class="vector-icon1" alt="" src="Vector.svg">
+				<img class="vector-icon1" alt="" src="./home-image/Vector.svg">
 
 			</div>
-			<img class="group-icon1" alt="" src="Group.svg">
+			<img class="group-icon1" alt="" src="./home-image/Group.svg">
 
 		</div>
-		<img class="send-fill-icon" alt="" src="Send_fill.png">
+		<img class="send-fill-icon" alt="" src="./home-image/Send_fill.png">
 
 		<div class="quick-acces">
-			<img class="my-batches-icon-2" alt="" src="My batches icon 2.svg">
+			<img class="my-batches-icon-2" alt="" src="./home-image/My batches icon 2.svg">
 
 			<div class="heading6">My Courses</div>
 			<div class="heading7">Mentorship</div>
@@ -219,29 +219,29 @@
 			<div class="heading11">1 : 1 mentorship for 24 hrs of teaching and help assistance </div>
 			<div class="heading12">Click here to view your performance based dashboard</div>
 			<div class="heading13">View the lists of the doubts ask by you </div>
-			<img class="dashboard-1-icon" alt="" src="Dashboard 1.svg">
+			<img class="dashboard-1-icon" alt="" src="./home-image/Dashboard 1.svg">
 
-			<img class="vector-icon2" alt="" src="Vector.svg">
+			<img class="vector-icon2" alt="" src="./home-image/Vector.svg">
 
-			<img class="group-icon2" alt="" src="Group.svg">
+			<img class="group-icon2" alt="" src="./home-image/Group.svg">
 
-			<img class="group-icon3" alt="" src="Group.svg">
+			<img class="group-icon3" alt="" src="./home-image/Group.svg">
 
-			<img class="group-icon4" alt="" src="Group.svg">
+			<img class="group-icon4" alt="" src="./home-image/Group.svg">
 
-			<img class="group-icon5" alt="" src="Group.svg">
+			<img class="group-icon5" alt="" src="./home-image/Group.svg">
 
-			<img class="group-icon6" alt="" src="Group.svg">
+			<img class="group-icon6" alt="" src="./home-image/Group.svg">
 
-			<img class="feature2-3d2x-1-icon" alt="" src="feature2_3d@2x 1.png">
+			<img class="feature2-3d2x-1-icon" alt="" src="./home-image/feature2_3d@2x 1.png">
 
 			<div class="heading14">Demo Class</div>
 			<div class="heading15">You can visit demo classes for a particular classes </div>
 			<div class="heading16">Downloads</div>
 			<div class="heading17">1 : 1 mentorship for 24 hrs of teaching and help assistance </div>
-			<img class="vector-icon3" alt="" src="Vector.svg">
+			<img class="vector-icon3" alt="" src="./home-image/Vector.svg">
 
-			<img class="import-icon" alt="" src="Import.svg">
+			<img class="import-icon" alt="" src="./home-image/Import.svg">
 
 		</div>
 	</div>
