update home.html to replace image paths and enhance link functionality for better navigation

--- a/home.html
+++ b/home.html
@@ -18,8 +18,6 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amaranth:wght@400&display=swap" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amethysta:wght@400&display=swap" />
 
-
-
 </head>
 
 <body>
@@ -36,41 +34,47 @@
 				</div>
 				<div class="sign-up1">Sign Up</div>
 			</div>
-			<img class="user-profile-icon" alt="" src="./home-image/User_Profile.svg">
+			<a href=""><img class="user-profile-icon" alt="" src="User_Profile.png"></a>
 
 			<div class="courses">
-				<div class="resousces">courses</div>
-				<img class="expand-right-icon" alt="" src="./home-image/Expand_right.svg">
+				<a href="">
+					<div class="resousces">Courses</div>
+				</a>
+				<img class="expand-right-icon" alt="" src="down arrow.png">
 
 			</div>
 			<div class="home">
-				<div class="resousces">home</div>
+				<a href="">
+					<div class="resousces">Home</div>
+				</a>
 			</div>
 			<div class="home2">
 				<div class="shiksha-sahayak">Shiksha Sahayak </div>
 			</div>
 			<div class="resources">
-				<div class="resousces">resousces</div>
-				<img class="expand-right-icon1" alt="" src="./home-image/Expand_right.svg">
+				<a href="">
+					<div class="resousces">Resousces</div>
+				</a>
+				<img class="expand-right-icon1" alt="" src="down arrow.png">
 
 			</div>
-			<img class="logo-icon" alt="" src="./home-image/Logo.png">
+			<img class="logo-icon" alt="" src="platform logo.jpg">
 
 		</div>
-		<img class="background-image-1-icon" alt="" src="./home-image/background-image 1.png">
+		<img class="background-image-1-icon" alt="" src="background-image 1.png">
 
 		<div class="heading">All Kids Are Best </div>
 		<div class="heading1">Explorer In The World</div>
 		<div class="chatbot-parent">
 			<div class="chatbot">
 				<div class="heading2">How May I Help You?</div>
-				<img class="first-background-image-icon" alt="" src="./home-image/First_background-image.png">
+				<a href=""><img class="first-background-image-icon" alt="" src="First_background-image.png"></a>
 
 			</div>
-			<img class="group-child" alt="" src="./home-image/Line 1.svg">
+			<img class="group-child" alt="" src="Line 1.svg">
 
 		</div>
-		<img class="libray-1-icon" alt="" src="./home-image/libray 1.png">
+		<img class="libray-1-icon" alt="" src="libray 1.png">
 
 		<div class="heading3">Quick Access</div>
 		<div class="heading3">Quick Access</div>
@@ -99,7 +103,7 @@
 							</div>
 							<div class="interactive-e-book-library-parent">
 								<div class="interactive-e-book-library"> Interactive E-Book Library</div>
-								<img class="icon" alt="" src="./home-image/2606553_5888 2.svg">
+
 
 								<div class="a-collection-of">A collection of animated and audio-supported e-books with a
 									read-along feature and multilingual support. Students can download books for offline
@@ -141,75 +145,58 @@
 							</div>
 						</div>
 					</div>
-					<img class="icon1" alt="" src="./home-image/6543906 1.png">
+					<img class="icon1" alt="" src="6543906 1.png">
 
-					<img class="ani-cartoon-38-1-icon" alt="" src="./home-image/26538972_2022_ani_cartoon_38 1.png">
+					<img class="ani-cartoon-38-1-icon" alt="" src="26538972_2022_ani_cartoon_38 1.png">
 
-					<img class="p3mtr0-971-1-icon" alt="" src="./home-image/1713080_244242-P3MTR0-971 1.png">
+					<img class="p3mtr0-971-1-icon" alt="" src="1713080_244242-P3MTR0-971 1.png">
 
 				</div>
 			</div>
 			<div class="objects">
-				<img class="xmlid-55-icon" alt="" src="./home-image/XMLID_55_.svg">
+				<a href=""><img class="xmlid-55-icon" alt="" src="326850.png">
 
-				<img class="xmlid-19-icon" alt="" src="./home-image/XMLID_19_.svg">
+					<img class="xmlid-19-icon" alt="" src="326850.png">
 
-				<img class="xmlid-327-icon" alt="" src="./home-image/XMLID_327_.svg">
+					<img class="xmlid-327-icon" alt="" src="326850.png">
 
-				<img class="xmlid-163-icon" alt="" src="./home-image/XMLID_163_.svg">
-
-				<img class="xmlid-312-icon" alt="" src="./home-image/XMLID_312_.svg">
-
-				<img class="xmlid-164-icon" alt="" src="./XMLID_164_.svgXMLID_164_.svg">
-
-				<img class="xmlid-161-icon" alt="" src="./home-image/XMLID_161_.svg">
-
-				<img class="xmlid-159-icon" alt="" src="./home-image/XMLID_159_.svg">
-
-				<img class="xmlid-89-icon" alt="" src="./home-image/XMLID_89_.svg">
-
-				<img class="xmlid-108-icon" alt="" src="./home-image/XMLID_108_.svg">
+					<img class="xmlid-163-icon" alt="" src="326850.png"></a>
 
 				<div class="xmlid-28-">
-					<img class="xmlid-353-icon" alt="" src="./home-image/XMLID_353_.svg">
 
-					<img class="xmlid-51-icon" alt="" src="./home-image/XMLID_51_.svg">
-
-					<img class="xmlid-50-icon" alt="" src="./home-image/XMLID_50_.svg">
-
-					<img class="xmlid-403-icon" alt="" src="./home-image/XMLID_403_.svg">
 
 					<div class="xmlid-374-">
 						<div class="xmlid-398-">
-							<img class="xmlid-401-icon" alt="" src="./home-image/XMLID_401_.svg">
+							<img class="xmlid-401-icon" alt="" src="">
 
-							<img class="xmlid-399-icon" alt="" src="./home-image/XMLID_399_.svg">
+							<img class="xmlid-399-icon" alt="" src="">
 
 						</div>
 					</div>
-					<img class="xmlid-373-icon" alt="" src="./home-image/XMLID_373_.svg">
+					<img class="xmlid-373-icon" alt="" src="">
 
-					<img class="xmlid-372-icon" alt="" src="./home-image/XMLID_372_.svg">
+					<img class="xmlid-372-icon" alt="" src="">
 
-					<img class="xmlid-29-icon" alt="" src="./home-image/XMLID_372_.svg">
+					<img class="xmlid-29-icon" alt="" src="">
 
 				</div>
 			</div>
-			<img class="vector-icon" alt="" src="./home-image/Vector.svg">
+			<img class="vector-icon" alt="" src="Vector.svg">
 
 			<div class="group">
-				<img class="group-icon" alt="" src="./home-image/Group.svg">
+				<img class="group-icon" alt="" src="Group.svg">
 
-				<img class="vector-icon1" alt="" src="./home-image/Vector.svg">
+
 
 			</div>
-			<img class="group-icon1" alt="" src="./home-image/Group.svg">
+			<img class="group-icon1" alt="" src="Group.svg">
 
 		</div>
-		<img class="send-fill-icon" alt="" src="./home-image/Send_fill.png">
+		<a href=""><img class="send-fill-icon" alt="" src="60534.png"></a>
 
 		<div class="quick-acces">
-			<img class="my-batches-icon-2" alt="" src="./home-image/My batches icon 2.svg">
+			<a href=""><img class="my-batches-icon-2" alt=""
+					src="stack-of-books-isolated-illustration-stacked-books-for-logo-icon-symbol-business-design-or-decoration-stacked-blue-red-and-green-books-illustration-hygge-style-vector.jpg"></a>
 
 			<div class="heading6">My Courses</div>
 			<div class="heading7">Mentorship</div>
@@ -219,29 +206,29 @@
 			<div class="heading11">1 : 1 mentorship for 24 hrs of teaching and help assistance </div>
 			<div class="heading12">Click here to view your performance based dashboard</div>
 			<div class="heading13">View the lists of the doubts ask by you </div>
-			<img class="dashboard-1-icon" alt="" src="./home-image/Dashboard 1.svg">
+			<a href=""><img class="dashboard-1-icon" alt="" src="6821002.png"></a>
 
-			<img class="vector-icon2" alt="" src="./home-image/Vector.svg">
+			<img class="vector-icon2" alt="" src="">
 
-			<img class="group-icon2" alt="" src="./home-image/Group.svg">
+			<img class="group-icon2" alt="" src="">
 
-			<img class="group-icon3" alt="" src="./home-image/Group.svg">
+			<a href=""><img class="group-icon3" alt="" src="7057708.png"></a>
 
-			<img class="group-icon4" alt="" src="./home-image/Group.svg">
+			<img class="group-icon4" alt="" src="">
 
-			<img class="group-icon5" alt="" src="./home-image/Group.svg">
+			<img class="group-icon5" alt="" src="">
 
-			<img class="group-icon6" alt="" src="./home-image/Group.svg">
+			<img class="group-icon6" alt="" src="">
 
-			<img class="feature2-3d2x-1-icon" alt="" src="./home-image/feature2_3d@2x 1.png">
+			<a href=""><img class="feature2-3d2x-1-icon" alt="" src="9746208.png"></a>
 
 			<div class="heading14">Demo Class</div>
 			<div class="heading15">You can visit demo classes for a particular classes </div>
 			<div class="heading16">Downloads</div>
 			<div class="heading17">1 : 1 mentorship for 24 hrs of teaching and help assistance </div>
-			<img class="vector-icon3" alt="" src="./home-image/Vector.svg">
+			<a href=""><img class="vector-icon3" alt="" src="76167-200.png"></a>
 
-			<img class="import-icon" alt="" src="./home-image/Import.svg">
+			<img class="import-icon" alt="" src="download-6155763_960_720.webp">
 
 		</div>
 	</div>
