refactor STEM classes for improved naming and alignment

--- a/Course-files/STEM.html
+++ b/Course-files/STEM.html
@@ -22,15 +22,15 @@
     		<img class="logo-icon" alt="" src="Logo.png">
     		
     		<div class="stem">STEM</div>
-    		<b class="enhance-math-skill-container">
-      			<p class="enhance-math-skill">Enhance Math Skill </p>
-      			<p class="enhance-math-skill">With Interactive Lessons</p>
+    		<b class="learn-experiment-and-container">
+      			<p class="learn-experiment-and">Learn, Experiment and Earn Skills </p>
+      			<p class="learn-experiment-and">With Interactive Lessons</p>
     		</b>
     		<img class="doubt-engine-1" alt="" src="Doubt engine 1.svg">
     		
     		<b class="how-may-i-container">
-      			<p class="enhance-math-skill">How may I </p>
-      			<p class="enhance-math-skill">help You </p>
+      			<p class="learn-experiment-and">How may I </p>
+      			<p class="learn-experiment-and">help You </p>
     		</b>
     		<div class="stem-course-inner">
     		</div>
