add faq section and add image and also add footer

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amaranth:wght@400&display=swap" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amethysta:wght@400&display=swap" />
-
+	
 </head>
 
 <body>
@@ -34,13 +34,13 @@
 				</div>
 				<div class="sign-up1">Sign Up</div>
 			</div>
-			<a href=""><img class="user-profile-icon" alt="" src="User_Profile.png"></a>
+			<a href=""><img class="user-profile-icon" alt="" src="home-image/User_Profile.png"></a>
 
 			<div class="courses">
 				<a href="">
 					<div class="resousces">Courses</div>
 				</a>
-				<img class="expand-right-icon" alt="" src="down arrow.png">
+				<img class="expand-right-icon" alt="" src="home-image/down arrow.svg">
 
 			</div>
 			<div class="home">
@@ -55,26 +55,26 @@
 				<a href="">
 					<div class="resousces">Resousces</div>
 				</a>
-				<img class="expand-right-icon1" alt="" src="down arrow.png">
+				<img class="expand-right-icon1" alt="" src="home-image/down arrow.svg">
 
 			</div>
-			<img class="logo-icon" alt="" src="platform logo.jpg">
+			<img class="logo-icon" alt="" src="home-image/Logo.png">
 
 		</div>
-		<img class="background-image-1-icon" alt="" src="background-image 1.png">
+		<img class="background-image-1-icon" alt="" src="home-image/background-image 1.png">
 
 		<div class="heading">All Kids Are Best </div>
 		<div class="heading1">Explorer In The World</div>
 		<div class="chatbot-parent">
 			<div class="chatbot">
 				<div class="heading2">How May I Help You?</div>
-				<a href=""><img class="first-background-image-icon" alt="" src="First_background-image.png"></a>
+				<a href=""><img class="first-background-image-icon" alt="" src="home-image/First_background-image.png"></a>
 
 			</div>
-			<img class="group-child" alt="" src="Line 1.svg">
+			<img class="group-child" alt="" src="home-image/Line 1.svg">
 
 		</div>
-		<img class="libray-1-icon" alt="" src="libray 1.png">
+		<img class="libray-1-icon" alt="" src="home-image/libray 1.png">
 
 		<div class="heading3">Quick Access</div>
 		<div class="heading3">Quick Access</div>
@@ -145,22 +145,22 @@
 							</div>
 						</div>
 					</div>
-					<img class="icon1" alt="" src="6543906 1.png">
+					<img class="icon1" alt="" src="home-image/6543906 1.png">
 
-					<img class="ani-cartoon-38-1-icon" alt="" src="26538972_2022_ani_cartoon_38 1.png">
+					<img class="ani-cartoon-38-1-icon" alt="" src="home-image/26538972_2022_ani_cartoon_38 1.png">
 
-					<img class="p3mtr0-971-1-icon" alt="" src="1713080_244242-P3MTR0-971 1.png">
+					<img class="p3mtr0-971-1-icon" alt="" src="home-image/1713080_244242-P3MTR0-971 1.png">
 
 				</div>
 			</div>
 			<div class="objects">
-				<a href=""><img class="xmlid-55-icon" alt="" src="326850.png">
+				<a href=""><img class="xmlid-55-icon" alt="" src="home-image/326850.png">
 
-					<img class="xmlid-19-icon" alt="" src="326850.png">
+					<img class="xmlid-19-icon" alt="" src="home-image/326850.png">
 
-					<img class="xmlid-327-icon" alt="" src="326850.png">
+					<img class="xmlid-327-icon" alt="" src="home-image/326850.png">
 
-					<img class="xmlid-163-icon" alt="" src="326850.png"></a>
+					<img class="xmlid-163-icon" alt="" src="home-image/326850.png"></a>
 
 				<div class="xmlid-28-">
 
@@ -181,22 +181,22 @@
 
 				</div>
 			</div>
-			<img class="vector-icon" alt="" src="Vector.svg">
+			<img class="vector-icon" alt="" src="home-image/Vector.svg">
 
 			<div class="group">
-				<img class="group-icon" alt="" src="Group.svg">
+				<img class="group-icon" alt="" src="home-image/Group.svg">
 
 
 
 			</div>
-			<img class="group-icon1" alt="" src="Group.svg">
+			<img class="group-icon1" alt="" src="home-image/Group.svg">
 
 		</div>
-		<a href=""><img class="send-fill-icon" alt="" src="60534.png"></a>
+		<a href=""><img class="send-fill-icon" alt="" src="home-image/60534.png"></a>
 
 		<div class="quick-acces">
 			<a href=""><img class="my-batches-icon-2" alt=""
-					src="stack-of-books-isolated-illustration-stacked-books-for-logo-icon-symbol-business-design-or-decoration-stacked-blue-red-and-green-books-illustration-hygge-style-vector.jpg"></a>
+					src="home-image/stack-of-books-isolated-illustration-stacked-books-for-logo-icon-symbol-business-design-or-decoration-stacked-blue-red-and-green-books-illustration-hygge-style-vector.jpg"></a>
 
 			<div class="heading6">My Courses</div>
 			<div class="heading7">Mentorship</div>
@@ -206,13 +206,13 @@
 			<div class="heading11">1 : 1 mentorship for 24 hrs of teaching and help assistance </div>
 			<div class="heading12">Click here to view your performance based dashboard</div>
 			<div class="heading13">View the lists of the doubts ask by you </div>
-			<a href=""><img class="dashboard-1-icon" alt="" src="6821002.png"></a>
+			<a href=""><img class="dashboard-1-icon" alt="" src="home-image/6821002.png"></a>
 
 			<img class="vector-icon2" alt="" src="">
 
 			<img class="group-icon2" alt="" src="">
 
-			<a href=""><img class="group-icon3" alt="" src="7057708.png"></a>
+			<a href=""><img class="group-icon3" alt="" src="home-image/7057708.png"></a>
 
 			<img class="group-icon4" alt="" src="">
 
@@ -220,18 +220,176 @@
 
 			<img class="group-icon6" alt="" src="">
 
-			<a href=""><img class="feature2-3d2x-1-icon" alt="" src="9746208.png"></a>
+			<a href=""><img class="feature2-3d2x-1-icon" alt="" src="home-image/9746208.png"></a>
 
 			<div class="heading14">Demo Class</div>
 			<div class="heading15">You can visit demo classes for a particular classes </div>
 			<div class="heading16">Downloads</div>
 			<div class="heading17">1 : 1 mentorship for 24 hrs of teaching and help assistance </div>
-			<a href=""><img class="vector-icon3" alt="" src="76167-200.png"></a>
+			<a href=""><img class="vector-icon3" alt="" src="home-image/76167-200.png"></a>
 
-			<img class="import-icon" alt="" src="download-6155763_960_720.webp">
+			<img class="import-icon" alt="" src="home-image/download-6155763_960_720.webp">
 
 		</div>
 	</div>
+<!-- faqbox -->
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="faq.css">
+</head>
+<body> -->
+    <section class="faq">
+        <h2>Frequently Asked Questions</h2>
+        <div class="faqbox">
+            <span>What is NetFlix</span>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+
+        </div>
+        <div class="faqbox">
+            <span>How much does Netflix cost?</span>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+
+        </div>
+        <div class="faqbox">
+            <span>What can I watch on Netflix?</span>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+
+        </div>
+        <div class="faqbox">
+            <span>Where can I watch?</span>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+
+        </div>
+    </section>
+<!-- </body> -->
+
+<!-- footer -->
+	<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Imperial College Footer</title>
+    <link rel="stylesheet" href="footer-main.css">
+</head>
+
+<body>
+    <footer class="footer">
+        <div class="footer-column">
+            <h3>INFORMATION FOR</h3>
+            <ul>
+                <li><a href="#">Prospective students</a></li>
+                <li><a href="#">Alumni</a></li>
+                <li><a href="#">Jobs</a></li>
+                <li><a href="#">Partners and business</a></li>
+                <li><a href="#">Media</a></li>
+                <li><a href="#">Donors</a></li>
+                <li><a href="#">Parents</a></li>
+                <li><a href="#">Conference organisers</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h3>TOP LINKS</h3>
+            <ul>
+                <li><a href="#">Imperial and the EU</a></li>
+                <li><a href="#">Outlook 365 web access</a></li>
+                <li><a href="#">Contact the ICT Service Desk</a></li>
+                <li><a href="#">Library</a></li>
+                <li><a href="#">Blackboard</a></li>
+                <li><a href="#">Sport</a></li>
+                <li><a href="#">Term dates</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h3>STUDENTS</h3>
+            <ul>
+                <li><a href="#">Imperial students</a></li>
+                <li><a href="#">Imperial College Union</a></li>
+                <li><a href="#">Student Hub</a></li>
+                <li><a href="#">Careers Service</a></li>
+                <li><a href="#">Imperial Mobile</a></li>
+                <li><a href="#">Graduation</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h3>STAFF</h3>
+            <ul>
+                <li><a href="#">Staff main page</a></li>
+                <li><a href="#">ICIS</a></li>
+                <li><a href="#">HR procedures</a></li>
+                <li><a href="#">Salaries, Terms and Conditions</a></li>
+                <li><a href="#">Pension schemes</a></li>
+                <li><a href="#">Research support</a></li>
+                <li><a href="#">Information for new staff</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h3>IMPERIAL PARTNERS</h3>
+            <ul>
+                <li><a href="#">Imperial College Healthcare NHS Trust</a></li>
+                <li><a href="#">Imperial College Academic Health Science Center</a></li>
+                <li><a href="#">Imperial College Health Parents</a></li>
+                <li><a href="#">Imperial Consultants</a></li>
+                <li><a href="#">Imperial Innovations</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h3>A-Z</h3>
+            <ul>
+                <li><a href="#">Faculties, departments and institutes</a></li>
+                <li><a href="#">Research groups</a></li>
+                <li><a href="#">Administration and support services</a></li>
+                <li><a href="#">People finder</a></li>
+            </ul>
+        </div>
+        <div class="footer-row">
+            <h3>Imperial College London</h3>
+            <ul>
+                <li><a href="#">South Kensington Campus</a></li>
+                <li><a href="#">London SW7 2AZ, UK</a></li>
+                <li><a href="#">tel: +44 (0)20 7589 5111</a></li>
+                <li><b><a href="#">Campuses & maps ></a></b></li>
+            </ul>
+        </div>
+        <div class="footer-row">
+            <h3>FOLLOW IMPERIAL</h3>
+            <div class="social-icons">
+                <a href="#">&#x1F426;</a>
+                <a href="#">&#x25B6;</a>
+                <a href="#">&#x1F4F7;</a>
+                <a href="#">&#x1F4F1;</a>
+                <a href="#">&#x1F310;</a>
+            </div>
+        </div>
+    </footer>
+    <div class="footer-bottom">
+        Imperial College London, South Kensington Campus, London SW7 2AZ, UK | Tel: +44 (0)20 7589 5111
+        <br>
+        <a href="#" style="color: white;">Sitemap</a> | <a href="#" style="color: white;">Accessibility</a> | <a
+            href="#" style="color: white;">Privacy notice</a> | <a href="#" style="color: white;">Report incorrect
+            content</a>
+        <br>
+    </div>
+</body>
+
+
 </body>
 
 </html>
