refactor CSS styles for consistency and readability; update HTML image sources

--- a/home.html
+++ b/home.html
@@ -154,13 +154,9 @@
 				</div>
 			</div>
 			<div class="objects">
-				<a href=""><img class="xmlid-55-icon" alt="" src="home-image/326850.png">
+				<a href=""><img class="xmlid-55-icon" alt="" src="home-image/.png">
 
-					<img class="xmlid-19-icon" alt="" src="home-image/326850.png">
-
-					<img class="xmlid-327-icon" alt="" src="home-image/326850.png">
-
-					<img class="xmlid-163-icon" alt="" src="home-image/326850.png"></a>
+					</a>
 
 				<div class="xmlid-28-">
 
@@ -189,7 +185,7 @@
 
 
 			</div>
-			<img class="group-icon1" alt="" src="home-image/Group.svg">
+			<img class="group-icon1" alt="" src="home-image/Group 2.svg">
 
 		</div>
 		<a href=""><img class="send-fill-icon" alt="" src="home-image/60534.png"></a>
