No code changes made; skipping commit.

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amaranth:wght@400&display=swap" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amethysta:wght@400&display=swap" />
-	
+
 </head>
 
 <body>
@@ -68,7 +68,8 @@
 		<div class="chatbot-parent">
 			<div class="chatbot">
 				<div class="heading2">How May I Help You?</div>
-				<a href=""><img class="first-background-image-icon" alt="" src="home-image/First_background-image.png"></a>
+				<a href=""><img class="first-background-image-icon" alt=""
+						src="home-image/First_background-image.png"></a>
 
 			</div>
 			<img class="group-child" alt="" src="home-image/Line 1.svg">
@@ -156,7 +157,7 @@
 			<div class="objects">
 				<a href=""><img class="xmlid-55-icon" alt="" src="home-image/.png">
 
-					</a>
+				</a>
 
 				<div class="xmlid-28-">
 
@@ -228,8 +229,8 @@
 
 		</div>
 	</div>
-<!-- faqbox -->
-<!-- <!DOCTYPE html>
+	<!-- faqbox -->
+	<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -238,158 +239,154 @@
     <link rel="stylesheet" href="faq.css">
 </head>
 <body> -->
-    <section class="faq">
-        <h2>Frequently Asked Questions</h2>
-        <div class="faqbox">
-            <span>What is NetFlix</span>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
+	<section class="faq">
+		<h2>Frequently Asked Questions</h2>
+		<div class="faqbox">
+			<span>What is NetFlix</span>
+			<svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+				<path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+				<path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+			</svg>
 
-        </div>
-        <div class="faqbox">
-            <span>How much does Netflix cost?</span>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
+		</div>
+		<div class="faqbox">
+			<span>How much does Netflix cost?</span>
+			<svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+				<path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+				<path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+			</svg>
 
-        </div>
-        <div class="faqbox">
-            <span>What can I watch on Netflix?</span>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
+		</div>
+		<div class="faqbox">
+			<span>What can I watch on Netflix?</span>
+			<svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+				<path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+				<path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+			</svg>
 
-        </div>
-        <div class="faqbox">
-            <span>Where can I watch?</span>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
+		</div>
+		<div class="faqbox">
+			<span>Where can I watch?</span>
+			<svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+				<path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+				<path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+			</svg>
 
-        </div>
-    </section>
-<!-- </body> -->
+		</div>
+	</section>
+	<!-- </body> -->
 
-<!-- footer -->
+	<!-- footer -->
 	<!DOCTYPE html>
-<html lang="en">
+	<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imperial College Footer</title>
-    <link rel="stylesheet" href="footer-main.css">
-</head>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Imperial College Footer</title>
+		<link rel="stylesheet" href="footer-main.css">
+	</head>
 
-<body>
-    <footer class="footer">
-        <div class="footer-column">
-            <h3>INFORMATION FOR</h3>
-            <ul>
-                <li><a href="#">Prospective students</a></li>
-                <li><a href="#">Alumni</a></li>
-                <li><a href="#">Jobs</a></li>
-                <li><a href="#">Partners and business</a></li>
-                <li><a href="#">Media</a></li>
-                <li><a href="#">Donors</a></li>
-                <li><a href="#">Parents</a></li>
-                <li><a href="#">Conference organisers</a></li>
-            </ul>
-        </div>
-        <div class="footer-column">
-            <h3>TOP LINKS</h3>
-            <ul>
-                <li><a href="#">Imperial and the EU</a></li>
-                <li><a href="#">Outlook 365 web access</a></li>
-                <li><a href="#">Contact the ICT Service Desk</a></li>
-                <li><a href="#">Library</a></li>
-                <li><a href="#">Blackboard</a></li>
-                <li><a href="#">Sport</a></li>
-                <li><a href="#">Term dates</a></li>
-            </ul>
-        </div>
-        <div class="footer-column">
-            <h3>STUDENTS</h3>
-            <ul>
-                <li><a href="#">Imperial students</a></li>
-                <li><a href="#">Imperial College Union</a></li>
-                <li><a href="#">Student Hub</a></li>
-                <li><a href="#">Careers Service</a></li>
-                <li><a href="#">Imperial Mobile</a></li>
-                <li><a href="#">Graduation</a></li>
-            </ul>
-        </div>
-        <div class="footer-column">
-            <h3>STAFF</h3>
-            <ul>
-                <li><a href="#">Staff main page</a></li>
-                <li><a href="#">ICIS</a></li>
-                <li><a href="#">HR procedures</a></li>
-                <li><a href="#">Salaries, Terms and Conditions</a></li>
-                <li><a href="#">Pension schemes</a></li>
-                <li><a href="#">Research support</a></li>
-                <li><a href="#">Information for new staff</a></li>
-            </ul>
-        </div>
-        <div class="footer-column">
-            <h3>IMPERIAL PARTNERS</h3>
-            <ul>
-                <li><a href="#">Imperial College Healthcare NHS Trust</a></li>
-                <li><a href="#">Imperial College Academic Health Science Center</a></li>
-                <li><a href="#">Imperial College Health Parents</a></li>
-                <li><a href="#">Imperial Consultants</a></li>
-                <li><a href="#">Imperial Innovations</a></li>
-            </ul>
-        </div>
-        <div class="footer-column">
-            <h3>A-Z</h3>
-            <ul>
-                <li><a href="#">Faculties, departments and institutes</a></li>
-                <li><a href="#">Research groups</a></li>
-                <li><a href="#">Administration and support services</a></li>
-                <li><a href="#">People finder</a></li>
-            </ul>
-        </div>
-        <div class="footer-row">
-            <h3>Imperial College London</h3>
-            <ul>
-                <li><a href="#">South Kensington Campus</a></li>
-                <li><a href="#">London SW7 2AZ, UK</a></li>
-                <li><a href="#">tel: +44 (0)20 7589 5111</a></li>
-                <li><b><a href="#">Campuses & maps ></a></b></li>
-            </ul>
-        </div>
-        <div class="footer-row">
-            <h3>FOLLOW IMPERIAL</h3>
-            <div class="social-icons">
-                <a href="#">&#x1F426;</a>
-                <a href="#">&#x25B6;</a>
-                <a href="#">&#x1F4F7;</a>
-                <a href="#">&#x1F4F1;</a>
-                <a href="#">&#x1F310;</a>
-            </div>
-        </div>
-    </footer>
-    <div class="footer-bottom">
-        Imperial College London, South Kensington Campus, London SW7 2AZ, UK | Tel: +44 (0)20 7589 5111
-        <br>
-        <a href="#" style="color: white;">Sitemap</a> | <a href="#" style="color: white;">Accessibility</a> | <a
-            href="#" style="color: white;">Privacy notice</a> | <a href="#" style="color: white;">Report incorrect
-            content</a>
-        <br>
-    </div>
-</body>
+	<body>
+		<footer class="footer">
+			<div class="footer-column">
+				<h3>INFORMATION FOR</h3>
+				<ul>
+					<li><a href="#">Prospective students</a></li>
+					<li><a href="#">Alumni</a></li>
+					<li><a href="#">Jobs</a></li>
+					<li><a href="#">Partners and business</a></li>
+					<li><a href="#">Media</a></li>
+					<li><a href="#">Donors</a></li>
+					<li><a href="#">Parents</a></li>
+					<li><a href="#">Conference organisers</a></li>
+				</ul>
+			</div>
+			<div class="footer-column">
+				<h3>TOP LINKS</h3>
+				<ul>
+					<li><a href="#">Imperial and the EU</a></li>
+					<li><a href="#">Outlook 365 web access</a></li>
+					<li><a href="#">Contact the ICT Service Desk</a></li>
+					<li><a href="#">Library</a></li>
+					<li><a href="#">Blackboard</a></li>
+					<li><a href="#">Sport</a></li>
+					<li><a href="#">Term dates</a></li>
+				</ul>
+			</div>
+			<div class="footer-column">
+				<h3>STUDENTS</h3>
+				<ul>
+					<li><a href="#">Imperial students</a></li>
+					<li><a href="#">Imperial College Union</a></li>
+					<li><a href="#">Student Hub</a></li>
+					<li><a href="#">Careers Service</a></li>
+					<li><a href="#">Imperial Mobile</a></li>
+					<li><a href="#">Graduation</a></li>
+				</ul>
+			</div>
+			<div class="footer-column">
+				<h3>STAFF</h3>
+				<ul>
+					<li><a href="#">Staff main page</a></li>
+					<li><a href="#">ICIS</a></li>
+					<li><a href="#">HR procedures</a></li>
+					<li><a href="#">Salaries, Terms and Conditions</a></li>
+					<li><a href="#">Pension schemes</a></li>
+					<li><a href="#">Research support</a></li>
+					<li><a href="#">Information for new staff</a></li>
+				</ul>
+			</div>
+			<div class="footer-column">
+				<h3>IMPERIAL PARTNERS</h3>
+				<ul>
+					<li><a href="#">Imperial College Healthcare NHS Trust</a></li>
+					<li><a href="#">Imperial College Academic Health Science Center</a></li>
+					<li><a href="#">Imperial College Health Parents</a></li>
+					<li><a href="#">Imperial Consultants</a></li>
+					<li><a href="#">Imperial Innovations</a></li>
+				</ul>
+			</div>
+			<div class="footer-column">
+				<h3>A-Z</h3>
+				<ul>
+					<li><a href="#">Faculties, departments and institutes</a></li>
+					<li><a href="#">Research groups</a></li>
+					<li><a href="#">Administration and support services</a></li>
+					<li><a href="#">People finder</a></li>
+				</ul>
+			</div>
+			<div class="footer-row">
+				<h3>Imperial College London</h3>
+				<ul>
+					<li><a href="#">South Kensington Campus</a></li>
+					<li><a href="#">London SW7 2AZ, UK</a></li>
+					<li><a href="#">tel: +44 (0)20 7589 5111</a></li>
+					<li><b><a href="#">Campuses & maps ></a></b></li>
+				</ul>
+			</div>
+			<div class="footer-row">
+				<h3>FOLLOW IMPERIAL</h3>
+				<div class="social-icons">
+					<a href="#">&#x1F426;</a>
+					<a href="#">&#x25B6;</a>
+					<a href="#">&#x1F4F7;</a>
+					<a href="#">&#x1F4F1;</a>
+					<a href="#">&#x1F310;</a>
+				</div>
+			</div>
+		</footer>
+		<div class="footer-bottom">
+			Imperial College London, South Kensington Campus, London SW7 2AZ, UK | Tel: +44 (0)20 7589 5111
+			<br>
+			<a href="#" style="color: white;">Sitemap</a> | <a href="#" style="color: white;">Accessibility</a> | <a
+				href="#" style="color: white;">Privacy notice</a> | <a href="#" style="color: white;">Report incorrect
+				content</a>
+			<br>
+		</div>
+	</body>
 
 
 </body>
 
 </html>
-
-
-
-
