add sidebar button image to mentorship page

--- a/mentorship.html
+++ b/mentorship.html
@@ -13,7 +13,7 @@
 
     <div style="width: 1496px; height: 1024px; position: relative; background: white; border: 1px black solid">
         <img style="width: 100px; height: 100px; left: 0px; top: 0px; position: absolute"
-            src="" />
+            src="mentorship-images/side-bar-button.png" />
         <div
             style="left: 650px; top: 26px; position: absolute; text-align: center; color: black; font-size: 40px; font-family: Londrina Solid; font-weight: 400; letter-spacing: 3.20px; word-wrap: break-word">
             Mentorship</div>
